--- a/traefik.service
+++ b/traefik.service
@@ -5,7 +5,7 @@ After=syslog.target
 
 [Service]
 Type=notify
-ExecStart=traefik -c /etc/traefik/traefik.yml
+ExecStart=/usr/bin/traefik -c /etc/traefik/traefik.yml
 WorkingDirectory=/etc/traefik
 Restart=on-failure
 User=traefik
